# BioReason

./: .gitignore  README.md  pyproject.toml  reason.py  requirements.txt  sh_reason.sh  sh_train_dna_only.sh  sh_train_dna_qwen.sh  train_dna_only.py  train_dna_qwen.py
bioreason/dataset/: kegg.py
bioreason/dna_modules/: nucleotide_module.py
bioreason/models/: __init__.py  dna_llm.py  dna_llm_reason.py  dna_only.py
bioreason/models/dl/: chat_template_dl.py  processing_dl.py
bioreason/utils/: jinja_helper.py
docs/tutorial_notebooks/tutorial6/: Transformers_and_MHAttention.ipynb
grpo_trainer_lora_model/: adapter_config.json
